--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    
+    <div class="banner-section">
+        <!-- header section code start-->
+        <div class="header">
+            <div class="container">
+                <div class="navbar">
+                    <div class="logo"></div>
+                    <div class="menu"></div>
+                </div>
+            </div>
+        </div>
+        <!-- header section code end-->
+    </div>
 </body>
 </html>
