--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Leverage 2.1</title>
 
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="banner-section">
@@ -14,8 +15,27 @@
         <div class="header">
             <div class="container">
                 <div class="navbar">
-                    <div class="logo"></div>
-                    <div class="menu"></div>
+                    <div class="logo">
+                        <a href="#">Leverage <span>2.1</span> </a>
+                    </div>
+                    <div class="menu">
+                        <!-- menu item -->
+                        <ul>
+                            <li><a href="/">Home</a></li>
+                            <li><a href="/">Features</a></li>
+                            <li><a href="/">Services</a></li>
+                            <li><a href="/">Contact</a></li>
+                        </ul>
+
+                        <!-- social icon -->
+                        <ul class="social-icon">
+                            <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                            <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                            <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                            <li><a href=""><i class="fab fa-google-plus"></i></a></li>
+                        </ul>
+                        <button class="">Buy Now</button>
+                    </div>
                 </div>
             </div>
         </div>
