--- a/index.html
+++ b/index.html
@@ -1,45 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leverage 2.1</title>
 
-    <link rel="stylesheet" href="./style/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+  </head>
+  <body>
     <div class="banner-section">
-        <!-- header section code start-->
-        <div class="header">
-            <div class="container">
-                <div class="navbar">
-                    <div class="logo">
-                        <a href="#">Leverage <span>2.1</span> </a>
-                    </div>
-                    <div class="menu">
-                        <!-- menu item -->
-                        <ul>
-                            <li><a href="/">Home</a></li>
-                            <li><a href="/">Features</a></li>
-                            <li><a href="/">Services</a></li>
-                            <li><a href="/">Contact</a></li>
-                        </ul>
-
-                        <!-- social icon -->
-                        <ul class="social-icon">
-                            <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                            <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                            <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-                            <li><a href=""><i class="fab fa-google-plus"></i></a></li>
-                        </ul>
-                        <button class="">Buy Now</button>
-                    </div>
-                </div>
+      <!-- header section code start-->
+      <div class="header">
+        <div class="container">
+          <div class="navbar">
+            <div class="logo">
+              <a href="#">Leverage <span>2.1</span> </a>
             </div>
+            <div class="menu">
+              <!-- menu item -->
+              <ul class="menu-item">
+                <li><a href="/">Home</a></li>
+                <li><a href="/">Features</a></li>
+                <li><a href="/">Services</a></li>
+                <li><a href="/">Contact</a></li>
+              </ul>
+
+              <!-- social icon -->
+              <ul class="social-icon">
+                <li>
+                  <a href=""><i class="fab fa-instagram"></i></a>
+                </li>
+                <li>
+                  <a href=""><i class="fab fa-facebook"></i></a>
+                </li>
+                <li>
+                  <a href=""><i class="fab fa-linkedin"></i></a>
+                </li>
+                <li>
+                  <a href=""><i class="fab fa-google-plus"></i></a>
+                </li>
+              </ul>
+              <button class="">Buy Now</button>
+            </div>
+          </div>
         </div>
-        <!-- header section code end-->
+      </div>
+      <!-- header section code end-->
+       <!-- banner section start -->
+    <div class="banner">
+        <div class="container">
+          <div class="banner-content">
+            <div>
+              <h1 style="font-size: 90px;color:#fc5130;">Photography & <br> Visual Art</h1>
+              <button class="common">Get Started</button>
+              <button class="read">Read More</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- banner section end -->
     </div>
-</body>
+
+   
+  </body>
 </html>
