working on form desing

--- a/form.html
+++ b/form.html
@@ -9,8 +9,14 @@
 </head>
 <body>
     <div class="container">
-        <H2>Form Design</H2>
-        <h1>Form Design</h1>
+        <div class="main-form">
+           <div class="form-box">
+               <div class="form-col-1">
+                   
+               </div>
+               <div class="form-col-2"></div>
+           </div>
+        </div>
     </div>
 </body>
 </html>
