working on styling

--- a/form.html
+++ b/form.html
@@ -12,9 +12,20 @@
         <div class="main-form">
            <div class="form-box">
                <div class="form-col-1">
-                   
+                    <div class="form-img">
+                        <img src="https://images.unsplash.com/photo-1516205651411-aef33a44f7c2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80" alt="">
+                    </div>
+                </div>
+               <div class="form-col-2">
+                   <div class="form-input-one">
+                       <input type="text" placeholder="First Name">
+                       <input type="text" placeholder="Last Name">
+                   </div>
+                   <div class="form-input-two">
+                       <input type="text" placeholder="username">
+                       <input type="text" placeholder="emailaddress">
+                   </div>
                </div>
-               <div class="form-col-2"></div>
            </div>
         </div>
     </div>
