--- a/form.html
+++ b/form.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form Design</title>
-    <link rel="stylesheet" href="./style/form.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style/form.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="main-form">
-           <div class="form-box">
-               <div class="form-col-1">
-                    <div class="form-img">
-                        <img src="https://images.unsplash.com/photo-1516205651411-aef33a44f7c2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80" alt="">
-                    </div>
-                </div>
-               <div class="form-col-2">
-                   <div class="form-input-one">
-                       <input type="text" placeholder="First Name">
-                       <input type="text" placeholder="Last Name">
-                   </div>
-                   <div class="form-input-two">
-                       <input type="text" placeholder="username">
-                       <input type="text" placeholder="emailaddress">
-                   </div>
-               </div>
-           </div>
+      <div class="main-form">
+        <div class="form-box">
+          <div class="form-col-1">
+            <div class="form-img">
+              <img
+                src="https://images.unsplash.com/photo-1518975835519-4de8028b1917?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=685&q=80"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="form-col-2">
+            <div class="form-input-one">
+              <input type="text" placeholder="First Name" />
+              <input type="text" placeholder="Last Name" />
+            </div>
+            <div class="form-input-two">
+              <input type="text" placeholder="Username" />
+              <input type="text" placeholder="Email Address" />
+              <select type="text" placeholder="Gender">
+                <option value="1">Male</option>
+                <option value="2">Female</option>   
+              </select>
+              <input type="text" placeholder="Password" />
+              <input type="text" placeholder="Confirm Password" />
+            </div>
+
+            <div class="form-button">
+                <input type="button" class="button">
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
