--- a/form.html
+++ b/form.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form Design</title>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/form.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   </head>
@@ -21,6 +22,9 @@
             </div>
           </div>
           <div class="form-col-2">
+            <div class="text-center">
+              <h1 style="text-align: center; color: black;padding-bottom: 40px;">Registration Form</h1>
+            </div>
             <div class="form-input-one">
               <input type="text" placeholder="First Name" />
               <input type="text" placeholder="Last Name" />
