--- a/signin.html
+++ b/signin.html
@@ -16,7 +16,27 @@
           </div>
 
           <div class="form-input-part">
-            
+            <div class="username">
+              <label for="">Username</label>
+              <input type="text" placeholder="Enter Username">
+            </div>
+            <div class="password">
+              <label for="">Password</label>
+              <input type="text" placeholder="Enter Password">
+            </div>
+
+            <div class="button-and-checkbox">
+              <div class="check-box">
+                <input type="checkbox">
+                <label for="">Ramember me</label>
+              </div>
+              <div class="forger-pw">
+                <span>Forget Password</span>
+              </div>
+            </div>
+            <div class="signinbutton">
+              <button>LOGIN</button>
+            </div>
           </div>
         </div>
     </div>
