--- a/image-landing-page.html
+++ b/image-landing-page.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image-landing-page-design</title>
-    <link rel="stylesheet" href="./style/image-landing-page.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./style/image-landing-page.css" />
+  </head>
+  <body>
+    <!-- header section start -->
+    <div class="container">
+      <div class="nav">
+        <div class="logo">
+          <img src="./images/quick/logo.png" alt="" />
+        </div>
+
+        <div class="menu">
+          <ul>
+            <li><a href="#">Overviews</a></li>
+            <li><a href="#">Landings</a></li>
+            <li><a href="#">Pages</a></li>
+            <li><a href="#">Apps</a></li>
+            <li><a href="#">Docs</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- header section end -->
+  </body>
 </html>
