--- a/image-landing-page.html
+++ b/image-landing-page.html
@@ -9,23 +9,93 @@
   </head>
   <body>
     <!-- header section start -->
+   <header>
     <div class="container">
-      <div class="nav">
-        <div class="logo">
-          <img src="./images/quick/logo.png" alt="" />
-        </div>
-
-        <div class="menu">
-          <ul>
-            <li><a href="#">Overviews</a></li>
-            <li><a href="#">Landings</a></li>
-            <li><a href="#">Pages</a></li>
-            <li><a href="#">Apps</a></li>
-            <li><a href="#">Docs</a></li>
-          </ul>
+        <div class="nav">
+          <div class="logo">
+            <img src="./images/quick/logo.png" alt="" />
+          </div>
+  
+          <div class="menu">
+            <ul>
+              <li><a href="#">Overviews</a></li>
+              <li><a href="#">Landings</a></li>
+              <li><a href="#">Pages</a></li>
+              <li><a href="#">Apps</a></li>
+              <li><a href="#">Docs</a></li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
+   </header>
     <!-- header section end -->
+
+    <!-- banner section start -->
+    <div class="banner">
+        <div class="container">
+            <div class="banner-content">
+                <h1>It's time to amplify your <br> <span>Online business</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae quisquam, <br> repellat suscipit veritatis distinctio porro a eveniet at quaerat neque!</p>
+                <img src="./images/quick/home.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- banner section end -->
+
+
+    <!-- about section start -->
+
+    <div class="about">
+        <div class="container">
+            <div class="about-content">
+                <div class="a-left">
+                    <h2>3K+</h2>
+                    <p>Excepteur sint occaecat cupidatat non proident,sunt <br> in culpa qui deserunt mollit <br> anim id est laborum</p>
+                </div>
+                <div class="a-right">
+                    <h2>Successfully <br> completed <br> projects and ideas</h2>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- about section end -->
+
+    <!-- service section start -->
+    <div class="service">
+        <div class="container">
+            <div class="service-content">
+                <div class="item pink">
+                   <div>
+                    <img src="./images/quick/cardone.png" alt="">
+                    <h3>Unleash your creativity</h3>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cilum dolore eu fugiat nulla pariatur</p>
+                   </div>
+                </div>
+                <div class="item green">
+                    <div>
+                        <img src="./images/quick/cardtwo.png" alt="">
+                    <h3>Unleash your creativity</h3>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cilum dolore eu fugiat nulla pariatur</p>
+                    </div>
+                </div>
+                <div class="item yellow">
+                   <div>
+                    <img src="./images/quick/cardthree.png" alt="">
+                    <h3>Unleash your creativity</h3>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cilum dolore eu fugiat nulla pariatur</p>
+                   </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- service section end -->
+
+    <footer>
+        <div class="container">
+            <p>Copyright @ All rights reserved by Rian</p>
+        </div>
+    </footer>
   </body>
 </html>
