--- a/gorgo.html
+++ b/gorgo.html
@@ -1,33 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gorgo</title>
-    <link rel="stylesheet" href="./style/gorgo.css">
-</head>
-<body>
-      <!-- header section start -->
-   <header>
-    <div class="container">
+    <link rel="stylesheet" href="./style/gorgo.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  </head>
+  <body>
+    <!-- header section start -->
+    <header>
+      <div class="container">
         <div class="nav">
-          <div class="logo">
-            <img src="./images/quick/logo.png" alt="" />
+          <div class="nav-flex">
+            <div class="logo">
+              <img src="./images/gorgo/logo.png" alt="" />
+            </div>
+            <div class="menu">
+              <ul>
+                <li><a href="">Demos</a></li>
+                <li><a href="">Features</a></li>
+                <li><a href="">Documentation</a></li>
+              </ul>
+            </div>
           </div>
-  
-          <div class="menu">
-            <ul>
-              <li><a href="#">Overviews</a></li>
-              <li><a href="#">Landings</a></li>
-              <li><a href="#">Pages</a></li>
-              <li><a href="#">Apps</a></li>
-              <li><a href="#">Docs</a></li>
-            </ul>
+          <div class="button-nav">
+            <button class="nav-btn">Purchase Theme $29</button>
           </div>
         </div>
       </div>
-   </header>
+    </header>
     <!-- header section end -->
-</body>
+
+    <!-- home section start -->
+    
+   <section class="container">
+    <div class="home">
+        <div class="home-content">
+            <div>
+              <h1>Minimal Content <br> Focused Blog & <br>Magazine</h1>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla tempore quaerat nesciunt temporibus in. Officiis corrupti optio neque amet asperiores repellat veritatis sit accusantium praesentium?</p>
+              <i class="far fa-arrow-alt-circle-down"></i>
+            </div>
+        </div>
+  
+        <div class="home-image">
+            <img src="./images/gorgo/banner.png" alt="">
+        </div>
+  
+      </div>
+   </section>
+   <!-- home section end -->
+
+<!-- demo section start -->
+
+   <section class="container-fluid">
+       <div class="demo">
+           <h1>Our Stunning Demo</h1>
+           <i>Start with a unique demo to create an awesome blog, magazine or <br> focused content site</i>
+       </div>
+
+       <div class="demo-card">
+           <div class="item-one">
+               <div>
+                   <img src="./images/gorgo/classic.png" alt="">
+                    <p>Classic</p>
+                </div>
+           </div>
+           <div class="item-one">
+               <div>
+                   <img src="./images/gorgo/shop.png" alt="">
+                    <p>Classic</p>
+                </div>
+           </div>
+           <div class="item-one">
+               <div>
+                   <img src="./images/gorgo/dark.png" alt="">
+                    <p>Classic</p>
+                </div>
+           </div>
+           <div class="item-one">
+               <div>
+                   <img src="./images/gorgo/minimal.png" alt="">
+                    <p>Classic</p>
+                </div>
+           </div>
+       </div>
+   </section>
+
+   <!-- demo section end -->
+
+   <!-- line section start -->
+   <section class="container">
+       <div class="line-position">
+        <span class="line">
+           
+        </span>
+       </div>
+   </section>
+   <!-- line section end -->
+
+   <!-- features section start -->
+   <section class="container">
+        <div class="feature-content">
+            <h2>Features</h2>
+            <i>A quick tour of the main features</i>
+        </div>
+
+       <div class="all-feature">
+           <div class="feature-one">
+               <div>
+               <div class="icon-design">
+                <i class="fas fa-box"></i>
+               </div>
+                <h3>Fully Customizable</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, iusto quis. Officia, animi cum? Sint beatae id magnam, placeat nulla voluptatum? Iure quas eum vel.</p>
+               </div>
+           </div>
+           <div class="feature-one">
+               <div>
+               <div class="icon-design">
+                <i class="fas fa-bolt"></i>
+               </div>
+                <h3>Simple Demo Import</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, iusto quis. Officia, animi cum? Sint beatae id magnam, placeat nulla voluptatum? Iure quas eum vel.</p>
+               </div>
+           </div>
+           <div class="feature-one">
+               <div>
+               <div class="icon-design">
+                <i class="fas fa-lock"></i>
+               </div>
+                <h3>Paid & Free Memberships</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, iusto quis. Officia, animi cum? Sint beatae id magnam, placeat nulla voluptatum? Iure quas eum vel.</p>
+               </div>
+           </div>
+           <div class="feature-one">
+               <div>
+               <div class="icon-design">
+                <i class="fas fa-shopping-cart"></i>
+               </div>
+                <h3>Sell Digital & Physical Products</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, iusto quis. Officia, animi cum? Sint beatae id magnam, placeat nulla voluptatum? Iure quas eum vel.</p>
+               </div>
+           </div>
+           <div class="feature-one">
+               <div>
+               <div class="icon-design">
+                <i class="far fa-heart"></i>
+               </div>
+                <h3>Like Posts</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, iusto quis. Officia, animi cum? Sint beatae id magnam, placeat nulla voluptatum? Iure quas eum vel.</p>
+               </div>
+           </div>
+           <div class="feature-one">
+               <div>
+               <div class="icon-design">
+                <i class="fas fa-user"></i>
+               </div>
+                <h3>Responsive is not an option anymore</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, iusto quis. Officia, animi cum? Sint beatae id magnam, placeat nulla voluptatum? Iure quas eum vel.</p>
+               </div>
+           </div>
+       </div>
+   </section>
+   <!-- features section end -->
+
+
+   <!-- purchase section start -->
+
+   <section class="container-fluid">
+       <div class="gorgo-bg">
+           <div class="gorgo-content">
+               <h1>Purchase Gorgo Now <br> and Make Your Project <br> Easier</h1>
+              <div>
+                <button class="nav-btn">
+                    PURCHASE THEME $29
+                </button>
+              </div>
+               <span><i class="fas fa-globe-europe"></i> Themosaurus</span>
+           </div>
+       </div>
+   </section>
+
+   <!-- purchase section end -->
+  </body>
 </html>
