--- a/version3.html
+++ b/version3.html
@@ -16,6 +16,13 @@
       >
         Subscribe Now
       </button>
+
+
+      <div class="py-12">
+         <div class="bg-gray-500 rounded-full h-3/4 text-xl">
+
+         </div>
+      </div>
     </div>
   </body>
 </html>
