--- a/outdoor.html
+++ b/outdoor.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Outdoor</title>
-    <link rel="stylesheet" href="./style/outdoor.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style/outdoor.css" />
+  </head>
+  <body>
     <!-- header section start -->
     <header>
-        <div class="container">
-            <div class="navbar">
-                <div class="logo">
-                    <h3>OutDoor</h3>
-                </div>
+      <div class="container">
+        <div class="navbar">
+          <div class="logo">
+            <h3>OutDoor</h3>
+          </div>
 
-                <div class="menus">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                    <a href="#">
-                        <button class="menu-btn">Take Action</button>
-                    </a>
-                </div>
-            </div>
+          <div class="menus">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Projects</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+            <a href="#">
+              <button class="menu-btn">Take Action</button>
+            </a>
+          </div>
         </div>
+      </div>
     </header>
     <!-- header section end -->
-</body>
+  </body>
 </html>
