--- a/outdoor.html
+++ b/outdoor.html
@@ -25,13 +25,31 @@
               <li><a href="#">Blog</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
-            <a href="#">
-              <button class="menu-btn">Take Action</button>
-            </a>
+            <div>
+              <a href="#">
+                <button class="menu-btn">Take Action</button>
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </header>
     <!-- header section end -->
+
+    <!-- banner section design start -->
+    <section class="banner">
+      <div class="container">
+        <div class="banner-content">
+          <h3>Explore the colorful world</h3>
+          <div class="line"></div>
+          <h1>a wonderful gift</h1>
+
+          <a href="#">
+            <button>Learn More</button>
+          </a>
+        </div>
+      </div>
+    </section>
+    <!-- banner section design end -->
   </body>
 </html>
