--- a/outdoor.html
+++ b/outdoor.html
@@ -40,13 +40,15 @@
     <section class="banner">
       <div class="container">
         <div class="banner-content">
-          <h3>Explore the colorful world</h3>
-          <div class="line"></div>
-          <h1>a wonderful gift</h1>
+          <div>
+            <h3>Explore the colorful world</h3>
+            <div class="line"></div>
+            <h1>a wonderful gift</h1>
 
-          <a href="#">
-            <button>Learn More</button>
-          </a>
+            <a href="#">
+              <button>Learn More</button>
+            </a>
+          </div>
         </div>
       </div>
     </section>
