working on destination section

--- a/outdoor.html
+++ b/outdoor.html
@@ -53,5 +53,127 @@
       </div>
     </section>
     <!-- banner section design end -->
+
+    <!-- testimonial section start from here -->
+
+    <section class="testimonial">
+      <div class="container">
+        <div class="item">
+          <p>
+            " Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse
+            quaerat cupiditate fugit nemo modi odio. "
+          </p>
+          <h6>-Rian Islam</h6>
+        </div>
+      </div>
+    </section>
+    <!-- testimonial section end from here -->
+
+    <!-- event section start from here -->
+
+    <section class="events">
+      <div class="container">
+        <div class="events-content">
+          <h2>Upcoming Events</h2>
+          <div class="line"></div>
+          <div class="events-gallery">
+            <div class="event-post">
+              <div class="main-box">
+                <img src="./images/outdoor/cardOne.jpg" alt="" />
+                <div class="box"></div>
+              </div>
+
+              <h4>Everest Camp Trek</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
+                iusto.
+              </p>
+              <a href="#">Learn More --</a>
+            </div>
+
+            <div class="event-post">
+              <div class="main-box">
+                <img src="./images/outdoor/cardOne.jpg" alt="" />
+                <div class="box"></div>
+              </div>
+
+              <h4>Everest Camp Trek</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
+                iusto.
+              </p>
+              <a href="#">Learn More --</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- event section end from here -->
+
+    <!-- explore world start -->
+    <section class="explore">
+      <div class="container">
+        <div class="explore-flex">
+          <div class="blank"></div>
+          <div class="fill">
+            <div>
+              <h1>
+                EXPLORE THE <br />
+                WORLD
+              </h1>
+              <div class="line-left"></div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
+                atque! Ipsam voluptatem quisquam recusandae provident
+                consectetur impedit voluptas.
+              </p>
+              <a href="">LEARN MORE --></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- explore world end -->
+
+    <!-- destination section start -->
+
+    <section class="destination">
+      <div class="container">
+        <div class="destination-box">
+          <div class="des-content">
+            <h2>
+              UPCOMING TOURS <br />
+              & DESTINSTION
+            </h2>
+            <div class="line-left"></div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+              veritatis amet ex alias asperiores dolore. Reiciendis minus libero
+              voluptatum amet provident reprehenderit quas laborum quae non
+              suscipit nobis, cupiditate veritatis repudiandae sed deleniti
+              cumque in!
+            </p>
+            <a href="#">
+              <button>LEARN MORE</button>
+            </a>
+          </div>
+          <div class="des-img">
+            <div class="box-imgs">
+              <div class="box-one">
+                <img src="./images/outdoor/birdimg.jpg" alt="" />
+                <img src="./images/outdoor/columnImg.jpg" alt="" />
+              </div>
+              <div class="box-two">
+                <img src="./images/outdoor/columnthree.jpg" alt="" />
+                <img src="./images/outdoor/columntwo.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- destination section end -->
   </body>
 </html>
