--- a/outdoor.html
+++ b/outdoor.html
@@ -93,7 +93,7 @@
 
             <div class="event-post">
               <div class="main-box">
-                <img src="./images/outdoor/cardOne.jpg" alt="" />
+                <img src="./images/outdoor/columntwo.jpg" alt="" />
                 <div class="box"></div>
               </div>
 
@@ -175,5 +175,18 @@
     </section>
 
     <!-- destination section end -->
+
+    <!-- footer section start -->
+
+    <footer class="outdoor-footer">
+      <div class="container">
+        <div class="footer-content">
+          <p>123 Fifth Avenue,NY 10160,New York,USA | Phone 800-123-456 | Email: outdoor@gmail.com</p>
+          <span>Copyright @ 2019 Outdoor Adventure</span>
+        </div>
+      </div>
+    </footer>
+
+    <!-- footer section end -->
   </body>
 </html>
