--- a/outdoor.html
+++ b/outdoor.html
@@ -181,7 +181,10 @@
     <footer class="outdoor-footer">
       <div class="container">
         <div class="footer-content">
-          <p>123 Fifth Avenue,NY 10160,New York,USA | Phone 800-123-456 | Email: outdoor@gmail.com</p>
+          <p>
+            123 Fifth Avenue,NY 10160,New York,USA | Phone 800-123-456 | Email:
+            outdoor@gmail.com
+          </p>
           <span>Copyright @ 2019 Outdoor Adventure</span>
         </div>
       </div>
