--- a/version3.html
+++ b/version3.html
@@ -17,11 +17,32 @@
         Subscribe Now
       </button>
 
-
       <div class="py-12">
-         <div class="bg-gray-500 rounded-full h-3/4 text-xl">
+        <div class="bg-gray-500 rounded-full h-3/4 text-xl"></div>
 
-         </div>
+        <div class="grid grid-cols-4 gap-4 items-center">
+          <div
+            class="
+              bg-indigo-500
+              rounded-sm
+              justify-center
+              text-center
+              d-flex
+              py-10
+            "
+          >
+            <h1 class="text-xl">Hello world</h1>
+          </div>
+          <div class="bg-indigo-500 rounded-sm">
+            <h1 class="text-xl">Hello world</h1>
+          </div>
+          <div class="bg-indigo-500 rounded-sm">
+            <h1 class="text-xl">Hello world</h1>
+          </div>
+          <div class="bg-indigo-500 rounded-sm">
+            <h1 class="text-xl">Hello world</h1>
+          </div>
+        </div>
       </div>
     </div>
   </body>
