--- a/burger.html
+++ b/burger.html
@@ -10,5 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
   </head>
-  <body></body>
+  <body>
+    Hello
+  </body>
 </html>
