--- a/burger.html
+++ b/burger.html
@@ -5,12 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Burger Week</title>
+    <link rel="stylesheet" href="./style/burger.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
   </head>
   <body>
-    Hello
+    <!-- header section start from here -->
+    <header>
+      <div class="container">
+        <div class="navbar">
+          <div class="log">
+            <img src="./images/burger/logo.png" alt="" />
+          </div>
+          <div class="nav-menu">
+            <div class="top-contact">
+              <img src="./images/burger/bikelogo.png" alt="" />
+              <span>Express Delivery +1 234 567 890</span>
+            </div>
+            <div class="menus">
+              <div class="menus">
+                <ul>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Menu</a></li>
+                  <li><a href="#">About us</a></li>
+                  <li><a href="#">Contact us</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- header section end from here -->
+
+    <!-- banner section start form here -->
+    <section class="banner">
+      <div class="container">
+        <div class="banner-left">
+          <span></span>
+          <h1></h1>
+          <h2></h2>
+        </div>
+        <div class="banner-right">
+          <img src="./images/burger/burger.png" alt="" />
+        </div>
+      </div>
+    </section>
+    <!-- banner section  end form here -->
   </body>
 </html>
