working on banner design

--- a/burger.html
+++ b/burger.html
@@ -43,13 +43,15 @@
     <!-- banner section start form here -->
     <section class="banner">
       <div class="container">
-        <div class="banner-left">
-          <span></span>
-          <h1></h1>
-          <h2></h2>
-        </div>
-        <div class="banner-right">
-          <img src="./images/burger/burger.png" alt="" />
+        <div class="banner-content">
+          <div class="banner-left">
+            <span>It is a good time for the great taste of burgers</span>
+            <h1>Burger</h1>
+            <h2>Week</h2>
+          </div>
+          <div class="banner-right">
+            <img src="./images/burger/burger.png" alt="" />
+          </div>
         </div>
       </div>
     </section>
