add some images

--- a/burger.html
+++ b/burger.html
@@ -56,5 +56,24 @@
       </div>
     </section>
     <!-- banner section  end form here -->
+
+    <!-- features section start -->
+    <section>
+      <div class="container">
+        <div class="f-content">
+          <div class="f-left">
+            <div>
+              <img src="./images/burger/f-one.png" alt="" />
+              <div>
+                <h3>Try it today</h3>
+                <h2>Most Popular Burgar</h2>
+              </div>
+            </div>
+          </div>
+          <div class="f-right"></div>
+        </div>
+      </div>
+    </section>
+    <!-- features section end -->
   </body>
 </html>
