--- a/burger.html
+++ b/burger.html
@@ -62,7 +62,7 @@
       <div class="container">
         <div class="f-content">
           <div class="f-left">
-            <div>
+            <div class="b-item">
               <img src="./images/burger/f-one.png" alt="" />
               <div>
                 <h3>Try it today</h3>
@@ -70,7 +70,22 @@
               </div>
             </div>
           </div>
-          <div class="f-right"></div>
+          <div class="f-right">
+            <div class="b-item">
+              <img src="./images/burger/f-two.png" alt="" />
+              <div>
+                <h3>Try it today</h3>
+                <h2>More fun more taste</h2>
+              </div>
+            </div>
+            <div class="b-item">
+              <img src="./images/burger/f-three.png" alt="" />
+              <div>
+                <h3>Try it today</h3>
+                <h2>Fresh & chill</h2>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
