--- a/burger.html
+++ b/burger.html
@@ -58,29 +58,29 @@
     <!-- banner section  end form here -->
 
     <!-- features section start -->
-    <section>
+    <section class="features">
       <div class="container">
         <div class="f-content">
           <div class="f-left">
             <div class="b-item">
               <img src="./images/burger/f-one.png" alt="" />
-              <div>
+              <div class="b-content">
                 <h3>Try it today</h3>
                 <h2>Most Popular Burgar</h2>
               </div>
             </div>
           </div>
           <div class="f-right">
-            <div class="b-item">
+            <div class="b-item" style="margin-bottom: 30px">
               <img src="./images/burger/f-two.png" alt="" />
-              <div>
+              <div class="b-content">
                 <h3>Try it today</h3>
                 <h2>More fun more taste</h2>
               </div>
             </div>
             <div class="b-item">
               <img src="./images/burger/f-three.png" alt="" />
-              <div>
+              <div class="b-content">
                 <h3>Try it today</h3>
                 <h2>Fresh & chill</h2>
               </div>
