add card section

--- a/burger.html
+++ b/burger.html
@@ -90,5 +90,13 @@
       </div>
     </section>
     <!-- features section end -->
+
+    <!-- bargur with shadow card section start -->
+
+    <section class="bargur-card">
+      <div class="container"></div>
+    </section>
+    <!-- bargur with shadow card section end
+     -->
   </body>
 </html>
