--- a/burger.html
+++ b/burger.html
@@ -98,5 +98,9 @@
     </section>
     <!-- bargur with shadow card section end
      -->
+
+    <!-- slider for burger section start here -->
+    <section class="sliderForBurger"></section>
+    <!-- slider for burger section end here -->
   </body>
 </html>
