working on form section

--- a/burger.html
+++ b/burger.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Burger Week</title>
+    <title>🍔 Burger Week</title>
     <link rel="stylesheet" href="./style/burger.css" />
     <link
       rel="stylesheet"
@@ -102,5 +102,27 @@
     <!-- slider for burger section start here -->
     <section class="sliderForBurger"></section>
     <!-- slider for burger section end here -->
+
+    <!-- slider for burger form section start here -->
+    <section class="form-bg">
+      <h2>RESERVATION</h2>
+      <h1>BOOK YOUR TABLE</h1>
+
+      <div class="form-container">
+        <div class="form-flex">
+          <div class="form-one">
+            <div>
+              <input type="text" placeholder="NAME" />
+            </div>
+          </div>
+          <div class="form-two">
+            <div>
+              <input type="email" placeholder="Email" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- slider for burger form section end here -->
   </body>
 </html>
