--- a/burger.html
+++ b/burger.html
@@ -114,10 +114,22 @@
             <div>
               <input type="text" placeholder="NAME" />
             </div>
+            <div>
+              <input type="text" placeholder="DATE" />
+            </div>
+            <div>
+              <input type="text" placeholder="PEOPLE" />
+            </div>
           </div>
           <div class="form-two">
             <div>
               <input type="email" placeholder="Email" />
+            </div>
+            <div>
+              <input type="text" placeholder="TIME" />
+            </div>
+            <div>
+              <button type="submit" class="FORM-BTN">FIND A TABLE</button>
             </div>
           </div>
         </div>
