--- a/burger.html
+++ b/burger.html
@@ -136,5 +136,29 @@
       </div>
     </section>
     <!-- slider for burger form section end here -->
+
+    <!-- slider footer section start -->
+    <footer class="footer-container">
+      <div class="footer-bg">
+        <div class="footer-content">
+          <div class="content-one">
+            <img src="./images/burger/footer-logo.png" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
+              optio sunt, pariatur quibusdam corrupti aliquam blanditiis
+              perferendis fugiat, incidunt porro sequi? Molestias quam vel
+              accusantium eveniet magni, recusandae voluptate non.
+            </p>
+          </div>
+          <div class="content-two">
+            <div>
+              <h2>MAIN ROAD,BUILDING NAME,COUNTRY</h2>
+              <h2>INFO@COMPANYNAME.COM</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- slider footer section end -->
   </body>
 </html>
