--- a/burger.html
+++ b/burger.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🍔 Burger Week</title>
     <link rel="stylesheet" href="./style/burger.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -140,20 +142,33 @@
     <!-- slider footer section start -->
     <footer class="footer-container">
       <div class="footer-bg">
-        <div class="footer-content">
-          <div class="content-one">
-            <img src="./images/burger/footer-logo.png" alt="" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
-              optio sunt, pariatur quibusdam corrupti aliquam blanditiis
-              perferendis fugiat, incidunt porro sequi? Molestias quam vel
-              accusantium eveniet magni, recusandae voluptate non.
-            </p>
+        <div class="content-container">
+          <div class="footer-content">
+            <div class="content-one">
+              <img src="./images/burger/footer-logo.png" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
+                optio sunt, pariatur quibusdam corrupti aliquam blanditiis
+                perferendis fugiat, incidunt porro sequi? Molestias quam vel
+                accusantium eveniet magni, recusandae voluptate non. Lorem ipsum
+                dolor sit amet consectetur adipisicing elit. Sapiente quaerat
+                architecto maiores minus, facilis hic nulla perspiciatis
+                repellendus pariatur ut?
+              </p>
+            </div>
+            <div class="content-two">
+              <div>
+                <h3>MAIN ROAD,BUILDING NAME,COUNTRY</h3>
+                <h3>INFO@COMPANYNAME.COM</h2>
+              </div>
+            </div>
           </div>
-          <div class="content-two">
-            <div>
-              <h2>MAIN ROAD,BUILDING NAME,COUNTRY</h2>
-              <h2>INFO@COMPANYNAME.COM</h2>
+          <div class="footer-last">
+            <div class="last-one">
+              <p>© Company Name 2020. All rights reserved.</p>
+            </div>
+            <div class="last-two">
+
             </div>
           </div>
         </div>
