working on card section

--- a/burger.html
+++ b/burger.html
@@ -96,7 +96,9 @@
     <!-- bargur with shadow card section start -->
 
     <section class="bargur-card">
-      <div class="container"></div>
+      <div class="container">
+        <button class="testy">ALWAYS TASTY BURGER</button>
+      </div>
     </section>
     <!-- bargur with shadow card section end
      -->
@@ -158,8 +160,9 @@
             </div>
             <div class="content-two">
               <div>
-                <h3>MAIN ROAD,BUILDING NAME,COUNTRY</h3>
-                <h3>INFO@COMPANYNAME.COM</h2>
+                
+                <h3><i class="fas fa-map-marker-alt"></i>MAIN ROAD,BUILDING NAME,COUNTRY</h3>
+                 <h3><i class="far fa-envelope"></i> INFO@COMPANYNAME.COM</h2>
               </div>
             </div>
           </div>
@@ -168,7 +171,12 @@
               <p>© Company Name 2020. All rights reserved.</p>
             </div>
             <div class="last-two">
-
+              <div>
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-linkedin"></i>
+                <i class="fab fa-twitter"></i>
+              </div>
             </div>
           </div>
         </div>
