styling card section

--- a/burger.html
+++ b/burger.html
@@ -97,7 +97,9 @@
 
     <section class="bargur-card">
       <div class="container">
+       <div class="cardtitle-center">
         <button class="testy">ALWAYS TASTY BURGER</button>
+       </div>
       </div>
     </section>
     <!-- bargur with shadow card section end
