--- a/burger.html
+++ b/burger.html
@@ -100,6 +100,35 @@
        <div class="cardtitle-center">
         <button class="testy">ALWAYS TASTY BURGER</button>
        </div>
+       <div class="card-content">
+        <div>
+          <h1>CHOOSE & ENJOY</h1>
+        </div>
+        <div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores rerum perspiciatis saepe quaerat sunt id impedit eligendi laborum ex cumque molestias voluptatum, quis, minus vero tempora atque animi magni consequuntur quidem similique iste. Unde!</p>
+        </div>
+       </div>
+
+       <div class="bws">
+         <div class="cardOne">
+          <img src="./images/burger/bws-1.png" alt="">
+          <h1>LOREM IPSUM DOLOR</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis, maxime.</p>
+          <button class="order">ORDER NOW</button>
+         </div>
+         <div class="cardOne">
+          <img src="./images/burger/bws-1.png" alt="">
+          <h1>LOREM IPSUM DOLOR</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis, maxime.</p>
+          <button class="order">ORDER NOW</button>
+         </div>
+         <div class="cardOne">
+          <img src="./images/burger/bws-1.png" alt="">
+          <h1>LOREM IPSUM DOLOR</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis, maxime.</p>
+          <button class="order">ORDER NOW</button>
+         </div>
+       </div>
       </div>
     </section>
     <!-- bargur with shadow card section end
