--- a/burger.html
+++ b/burger.html
@@ -135,7 +135,18 @@
      -->
 
     <!-- slider for burger section start here -->
-    <section class="sliderForBurger"></section>
+    <section class="events">
+      <div class="container">
+        <div class="e-content">
+          <div class="e-left">
+            <h4>Discover</h4>
+            <h2>Upcoming Events</h2>
+            <p></p>
+          </div>
+        </div>
+      </div>
+
+    </section>
     <!-- slider for burger section end here -->
 
     <!-- slider for burger form section start here -->
