add js and css file

--- a/burger.html
+++ b/burger.html
@@ -7,6 +7,8 @@
     <title>🍔 Burger Week</title>
     <link rel="stylesheet" href="./style/burger.css" />
 
+    <link rel="stylesheet" href="./style/owl.carousel.min.css">
+    <link rel="stylesheet" href="./style/owl.theme.default.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link
       rel="stylesheet"
@@ -137,11 +139,16 @@
     <!-- slider for burger section start here -->
     <section class="events">
       <div class="container">
-        <div class="e-content">
-          <div class="e-left">
-            <h4>Discover</h4>
-            <h2>Upcoming Events</h2>
-            <p></p>
+        <div class="x-box">
+          <div class="e-content">
+            <div class="e-left">
+              <h4>Discover</h4>
+              <h2>Upcoming Events</h2>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus a dolore dolorem! Asperiores at saepe eos numquam, voluptas laudantium quasi, optio porro perspiciatis harum minus neque doloremque a? Exercitationem omnis quam nesciunt facere, placeat libero sapiente hic dolor. Repellat, facilis?</p>
+            </div>
+            <div class="e-right">
+              <img src="./images/burger/slider-pic.png" alt="">
+            </div>
           </div>
         </div>
       </div>
@@ -225,5 +232,8 @@
       </div>
     </footer>
     <!-- slider footer section end -->
+
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/owl.carousel.js"></script>
   </body>
 </html>
