--- a/startup.html
+++ b/startup.html
@@ -17,7 +17,7 @@
     <title>🌄StartUp</title>
   </head>
   <body>
-    <header class="position-absolute">
+    <header class="position-absolute py-5">
       <section class="container">
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
@@ -82,7 +82,7 @@
               </ul>
 
               <div class="d-flex">
-                <a href="#">Say Hello</a>
+                <a class="hello position-relative py-2" href="#">Say Hello</a>
               </div>
             </div>
           </div>
@@ -111,6 +111,23 @@
     </section>
     <!-- banner section end from here -->
 
+    <!-- services section start -->
+
+    <section class="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-4"></div>
+          <div class="col-md-4"></div>
+          <div class="col-md-4"></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- services section end -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
