working on services section

--- a/startup.html
+++ b/startup.html
@@ -115,9 +115,9 @@
 
     <section class="services">
       <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="s-content">
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <div class="s-content text-center">
               <h6>Services</h6>
               <h2>
                 With more than 20 years of experience we can deliver the best
@@ -140,7 +140,7 @@
           </div>
           <div class="col-md-4">
             <div class="s-item">
-              <img src="./images/startup/1.svg" alt="" />
+              <img src="./images/startup/2.svg" alt="" />
               <h4>Graphic Design</h4>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -150,7 +150,7 @@
           </div>
           <div class="col-md-4">
             <div class="s-item">
-              <img src="./images/startup/1.svg" alt="" />
+              <img src="./images/startup/3.svg" alt="" />
               <h4>Graphic Design</h4>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
