--- a/startup.html
+++ b/startup.html
@@ -163,6 +163,27 @@
     </section>
 
     <!-- services section end -->
+
+    <!-- about section start -->
+    <section class="about">
+      <div class="row">
+        <div class="col-md-6"></div>
+        <div class="col-md-6">
+          <div class="a-content">
+            <h6>About Us</h6>
+            <h4>Empowering individuals</h4>
+            <p>
+              Efficiently unleash cross-media tour function information without
+              cross action media value. Quickly maximize timely deliverables for
+              real-time schemas.
+            </p>
+            <p>“Function information without cross action media value.</p>
+            <a href="">About Us</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- about section end -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
