styling about content

--- a/startup.html
+++ b/startup.html
@@ -166,9 +166,9 @@
 
     <!-- about section start -->
     <section class="about">
-      <div class="row">
-        <div class="col-md-6"></div>
-        <div class="col-md-6">
+      <div class="row g-0">
+        <div class="col-md-6 a-left"></div>
+        <div class="col-md-6 a-right">
           <div class="a-content">
             <h6>About Us</h6>
             <h4>Empowering individuals</h4>
