designing about part

--- a/startup.html
+++ b/startup.html
@@ -177,7 +177,9 @@
               cross action media value. Quickly maximize timely deliverables for
               real-time schemas.
             </p>
-            <p>“Function information without cross action media value.</p>
+            <p class="second">
+              “Function information without cross action media value.
+            </p>
             <a href="">About Us</a>
           </div>
         </div>
