working on about button

--- a/startup.html
+++ b/startup.html
@@ -180,7 +180,7 @@
             <p class="second">
               “Function information without cross action media value.
             </p>
-            <a href="">About Us</a>
+            <a class="mt-5" href="">About Us</a>
           </div>
         </div>
       </div>
