--- a/startup.html
+++ b/startup.html
@@ -186,6 +186,23 @@
       </div>
     </section>
     <!-- about section end -->
+
+    <!-- featured section start -->
+
+    <section class="f-work">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="section-title">Featured Works</h2>
+            <p class="section-desc">
+              Tour function information without cross action media value quickly
+              maximize timely deliverables.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- featured section end -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
