--- a/startup.html
+++ b/startup.html
@@ -191,7 +191,7 @@
 
     <section class="f-work">
       <div class="container">
-        <div class="row">
+        <div class="row text-center">
           <div class="col-md-12">
             <h2 class="section-title">Featured Works</h2>
             <p class="section-desc">
