--- a/startup.html
+++ b/startup.html
@@ -192,7 +192,7 @@
     <section class="f-work">
       <div class="container">
         <div class="row text-center">
-          <div class="col-md-12">
+          <div class="col-md-6 offset-3">
             <h2 class="section-title">Featured Works</h2>
             <p class="section-desc">
               Tour function information without cross action media value quickly
