--- a/startup.html
+++ b/startup.html
@@ -200,6 +200,26 @@
             </p>
           </div>
         </div>
+
+        <div class="work-gallery">
+          <div class="row">
+            <div class="col-md-8">
+              <div class="w-item">
+                <img
+                  src="./images/startup/mobile.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="item-overly">
+                  <h6>App Design</h6>
+                  <h3>Mockup App</h3>
+                  <a href="#">View</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4"></div>
+          </div>
+        </div>
       </div>
     </section>
     <!-- featured section end -->
