--- a/startup.html
+++ b/startup.html
@@ -201,7 +201,7 @@
           </div>
         </div>
 
-        <div class="work-gallery">
+        <div class="work-gallery mt-5">
           <div class="row">
             <div class="col-md-8">
               <div class="w-item">
@@ -210,10 +210,12 @@
                   class="img-fluid"
                   alt=""
                 />
-                <div class="item-overly">
-                  <h6>App Design</h6>
-                  <h3>Mockup App</h3>
-                  <a href="#">View</a>
+                <div class="item-overlay">
+                  <div>
+                    <h6>App Design</h6>
+                    <h3>Mockup App</h3>
+                    <a href="#">View</a>
+                  </div>
                 </div>
               </div>
             </div>
